# colorful

./: CHANGELOG.md  Cargo.toml  README.md  coverage.sh
src/: color.rs  color_converter.rs  color_models.rs  common_colors.rs  converter.rs  lib.rs  models.rs  number_utils.rs  presets.rs
src/color/: hsv_color.rs  presets.rs  rgb_color.rs  utils.rs
src/color/rgb_color/: presets.rs
src/color_models/: hsv.rs  hsv_color.rs  number_utils.rs  rgb.rs  rgb24.rs  rgb_color.rs  utils.rs
src/color_models/rgb/: presets.rs  rgb.rs  rgb24.rs  rgb48.rs
src/color_models/rgb/rgb24/: presets.rs
src/color_models/rgb24/: presets.rs
src/color_models/rgb_color/: presets.rs
src/models/: hsv.rs  rgb.rs
src/models/rgb/: rgb24.rs  rgb48.rs
